--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLOUD_NAME=dddtnlpjt
 CLOUD_API_kEY=277986383386619
-CLOUD_API_SECRET=7e3lLg7vKflKePauaAduw_JEPr8
+CLOUD_API_SECRET=7e3lLg7vKflKePauaAduw_JEPr8 
+MONGO_URL=mongodb+srv://admin:itsme007@mycluster.r6zvl7l.mongodb.net/?retryWrites=true&w=majority&appName=myCluster
