--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
+MONGO_URL=mongodb://127.0.0.1:27017/wanderlust
 CLOUD_NAME=dddtnlpjt
 CLOUD_API_KEY=277986383386619
 CLOUD_API_SECRET=7e3lLg7vKflKePauaAduw_JEPr8
-MONGO_URL=mongodb+srv://admin:itsme007@mycluster.r6zvl7l.mongodb.net/sample_mflix?retryWrites=true&w=majority&ssl=true
